--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     Források:
+		Használat:  - (https://matekarcok.hu/pitagorasz-tetele/)
+			    - (https://konnyedentanulok.hu/pitagorasz-tetel-erthetoen/)
+			    - (https://www.nkp.hu/tankonyv/matematika_8/lecke_03_002)
+
+		Történelem: - (http://tutimatek.hu/a-pitagorasz-tetel-eredete/)
+			    - (https://hu.drunkentengu.com/istoriya-i-opredelenie-teoremyi-pifagora-116c14)
 
         
 </body>
