--- a/alkalmazas.html
+++ b/alkalmazas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Pitagorsz-tétel</title>
+    <title>Alkalmazása</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -17,15 +17,6 @@
             <div class="col"></div>
         </div>
     </div>
-    Források:
-    Használat: - (https://matekarcok.hu/pitagorasz-tetele/)
-    - (https://konnyedentanulok.hu/pitagorasz-tetel-erthetoen/)
-    - (https://www.nkp.hu/tankonyv/matematika_8/lecke_03_002)
-
-    Történelem: - (http://tutimatek.hu/a-pitagorasz-tetel-eredete/)
-    - (https://hu.drunkentengu.com/istoriya-i-opredelenie-teoremyi-pifagora-116c14)
-
-
 </body>
 
 </html>
