--- a/alkalmazas.html
+++ b/alkalmazas.html
@@ -14,7 +14,9 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col"></div>
+            <div class="col">
+                
+            </div>
         </div>
     </div>
 </body>
