--- a/alkalmazas.html
+++ b/alkalmazas.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                
+                Ez az egyik oldal.
             </div>
         </div>
     </div>
