A jelenlegi tartalmak megcsinálása

--- a/index.html
+++ b/index.html
@@ -12,9 +12,74 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Pitagporasz tétel</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="erdekessegek.html">Bizonyítás és érdekességek</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="alkalmazas.html">Alkalmazása</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="index.html">Főoldal</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
         <div class="row">
-            <div class="col"></div>
+            <div class="col-12">
+                <header>Története</header>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h1>Pitagorasz tétel</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p>Sajnos az életéről nagyon kevés bizonyított tény maradt fenn, és az sem sokszor hiteles. Sokszor
+                    pedig
+                    ezek az adatok teljesen ellent mondanak egymásnak, szóval nagyon semmi biztosan nem lehet tudni
+                    Pitagorsz életéről és munkásságáról.</p>
+                <p>A tétel Püthagorasz vagy Pitagorasz néven emlegetett matematikus-és fiziológusról kapta a nevét. Kr.
+                    e
+                    VI. században született Szamosz szigetén. Létre hozott egy titkos társulatot, ahol a matematika
+                    mellett
+                    vallási és politikai kérdésekkel is foglalkozott. A követőit püthagureusokként is emlegetjük, akik
+                    azt
+                    gondolták, hogy a világ a számok közötti kapcsolatokra épül. A vezetőjükre szinte félistenként
+                    tekintettek, legendákat is találtak ki róla, és ebből kifolyólag homályos annyira Pitagorsz élete és
+                    munkássága.</p>
+                <p>A püthagoreus filozófiai iskola létrehozója és alapítója is volt egyben. A filozófiai
+                    tevékenységeiről
+                    volt inkább ismertebb, mint a matematikai munkásságáról, szóval úgy vélik, hogy az utóbbival csak
+                    mellékesen foglalkozott.</p>
+                <p>Nagyon kevesen tudják, hogy a Pitagorsz-tételt már biztosan felfedezték előtte is, szóval nem ő
+                    fedezte
+                    fel, viszont valamelyik bizonyítás valószínűleg tőle származott. Eléggé elmosódott a határ aközött,
+                    hogy
+                    mit csinált ő és mit csináltak a tanítványi, de a későbbiekben mindent Pitagorsz nevéhez csatoltak.
+                </p>
+                <p>Vannak olyan legendák, hogy Pitagorasz a tétel bizonyításának megtalálása feletti örömében hálából
+                    száz
+                    ökröt áldozott volna Isteneknek. És ez valószínűleg nem igaz, mindenesetre arra jó volt, hogy alapot
+                    szolgáltasson Chamisso francia származású német költőnek, azon szonettje megírására, amely szerint
+                    azóta
+                    félnek az „ökrök” minden új felfedezéstől.</p>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <footer>Készítette az All4one csapata</footer>
+            </div>
         </div>
     </div>
     Források:
@@ -24,8 +89,6 @@
 
     Történelem: - (http://tutimatek.hu/a-pitagorasz-tetel-eredete/)
     - (https://hu.drunkentengu.com/istoriya-i-opredelenie-teoremyi-pifagora-116c14)
-
-
 </body>
 
 </html>
