--- a/alkalmazas.html
+++ b/alkalmazas.html
@@ -12,10 +12,38 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Pitagporasz tétel</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Főoldal</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="erdekessegek.html">Bizonyítás és érdekességek</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="alkalmazas.html">Alkalmazása</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        <div class="row">
+            <div class="col-12">
+                <header>Alkalmazása</header>
+            </div>
+        </div>
         <div class="row">
             <div class="col">
-                Ez az egyik oldal.
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <footer>Készítette az All4one csapata</footer>
             </div>
         </div>
     </div>
