--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                     szolgáltasson Chamisso francia származású német költőnek, azon szonettje megírására, amely szerint
                     azóta
                     félnek az „ökrök” minden új felfedezéstől.</p>
+                <h2> Summary:</h2>
+                <p>There's not much known about Pythagoras' life, however we can confidentialy say he was born on the island of Samos, he wasn't only a matematician, he had followers who idolised him abd created legends of him, and Pythagoras' Theorem actually existed before him.
+                </p> 
 
             </div>
         </div>
