--- a/erdekessegek.html
+++ b/erdekessegek.html
@@ -71,6 +71,13 @@
                         is.</li>
                     <li>Püthagoraszt a "Számok atyja"-ként is emlegetik.</li>
                 </ol>
+                <h2>Summary:</h2>
+                <p>The theorem existed way before Pythagoras, China even creating a proof.
+There're many who simply cram it, and thus don't ever understand Pythagoras' theorem.
+Along with his students he has made discoveries in astrology and music, not just in mathematics.
+He was known as the father of numbers.
+Proving the theory relies on the belief of if I take equal parts away from two identical objects, then I'll end up with two equal sized areas. So you draw two equal sized squares, and in the left one put a2 square and b2 square while in the other you put c2 square. the areas left should be the triangle we started with four times (so in equal sizes). Just take away those triangles and you should be left with the same area size from both big squares. </p>
+               
             </div>
         </div>
         <div class="row">
