--- a/alkalmazas.html
+++ b/alkalmazas.html
@@ -2,51 +2,91 @@
 <html lang="hu">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alkalmazása</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Alkalmazása</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Pitagporasz tétel</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Főoldal</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="erdekessegek.html">Bizonyítás és érdekességek</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="alkalmazas.html">Alkalmazása</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        <div class="row">
-            <div class="col-12">
-                <header>Alkalmazása</header>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <footer>Készítette az All4one csapata</footer>
-            </div>
-        </div>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Pitagporasz tétel</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Főoldal</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="erdekessegek.html">Bizonyítás és érdekességek</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="alkalmazas.html">Alkalmazása</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="row">
+      <div class="col-12">
+        <header>
+          <h2>Alkalmazása</h2>
+        </header>
+      </div>
     </div>
+    <div class="row">
+      <div class="col-12">
+        <p>Az alapvető képlet, amit nagyon sokan tudnak az, az a<sup>2</sup>+b<sup>2</sup>=c<sup>2</sup>.
+          Amit már nem biztos, hogy annyian tudnak (akik csak bemagolták a képletet, de nem értették meg, nem tudják a
+          logikáját és értelmezését), hogy, ha felcseréljük a tényezőket és az írásjeleket a helyükön hagyjuk, akkor a
+          képlet már nem lesz igaz.
+          Vagyis c<sup>2</sup>+b<sup>2</sup>=a<sup>2</sup>és c<sup>2</sup>+a<sup>2</sup>=b<sup>2</sup> nem lesz igaz.
+          Hivatalos megfogalmazása: A derékszögű háromszög befogóira emelt négyzetek területeinek összege egyenlő az
+          átfogóra emelt négyzet területével.
+          Szavakkal megfogalmazva: A derékszögű háromszög két befogójára rajzolt négyzet területének összege egyenlő az
+          átfogóra rajzolt négyzet területével.</p>
+
+        <h3>A tétel megfordítása:</h3>
+        <p>Ha egy háromszög két oldalhosszának négyzetösszege egyenlő a harmadik oldal hosszának négyzetével, akkor a
+          háromszög derékszögű.</p>
+        <p>Ha a<sup>2</sup>+b<sup>2</sup> kisebb, mint a c<sup>2</sup> akkor a háromszög TOMPASZÖGŰ. (A leghosszabb
+          oldallal szemben lévő szöge lesz a tompaszög.) Ha
+          a<sup>2</sup>+b<sup>2</sup>>c<sup>2</sup> akkor a háromszög HEGYESSZÖGŰ.
+          (A leghosszabb oldallal szemben lévő szöge is hegyesszög.)</p>
+
+
+        <p>A két befogó oldalhosszának négyzete egyenlő az átfogó oldalhosszának négyzetével</p>
+
+
+        <p>Már az ókorban is a ennek a tételnek a segítségével hoztak létre derékszöget anélkül, hogy a tételt
+          általánosságban kimondták volna.
+          Pitagoraszi számhármas: 32+42=52</p>
+
+        <h3 class="text-danger">Summary:</h3>
+        <p>Pythagoras' theorem states the following: the square of the hypotenuse is equal to the sum of the other two
+          sided' squares.
+          Or in short: a<sup>2</sup>+b<sup>2</sup>=c<sup>2</sup>.
+          If you just simply cram Pythagoras' theorem, you won't be able to properly use it.
+          If two sides' square sum is equal to that of the third side, then the triangle is right-angled, if
+          a<sup>2</sup>+b<sup>2</sup>
+          < c<sup>2</sup>
+            the it's an obtuse-angle, or if a<sup>2</sup>+b<sup>2</sup>> c<sup>2</sup>then it's an acute-angle.
+        </p>
+
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <footer>Készítette az All4one csapata</footer>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
