--- a/index.html
+++ b/index.html
@@ -15,31 +15,34 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Pitagporasz tétel</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="erdekessegek.html">Bizonyítás és érdekességek</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="alkalmazas.html">Alkalmazása</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="index.html">Főoldal</a>
-                </li>
-              </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="erdekessegek.html">Bizonyítás és érdekességek</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="alkalmazas.html">Alkalmazása</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="index.html">Főoldal</a>
+                    </li>
+                </ul>
             </div>
-          </nav>
+        </nav>
         <div class="row">
             <div class="col-12">
-                <header>Története</header>
+                <h1>Pitagorasz tétel</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-12">
-                <h1>Pitagorasz tétel</h1>
+                <header>
+                    <h2>Története</h2>
+                </header>
             </div>
         </div>
         <div class="row">
@@ -73,10 +76,58 @@
                     szolgáltasson Chamisso francia származású német költőnek, azon szonettje megírására, amely szerint
                     azóta
                     félnek az „ökrök” minden új felfedezéstől.</p>
-                <h2> Summary:</h2>
-                <p>There's not much known about Pythagoras' life, however we can confidentialy say he was born on the island of Samos, he wasn't only a matematician, he had followers who idolised him abd created legends of him, and Pythagoras' Theorem actually existed before him.
-                </p> 
+                <h3 class="text-danger"> Summary:</h3>
+                <p>There's not much known about Pythagoras' life, however we can confidentialy say he was born on the
+                    island of Samos, he wasn't only a matematician, he had followers who idolised him abd created
+                    legends of him, and Pythagoras' Theorem actually existed before him.
+                </p>
 
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <table>
+                    <tr>
+                        <td colspan="2">
+                            <h4>Források:</h4>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h6>Alkalmazás:</h6>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><a href="https://matekarcok.hu/pitagorasz-tetele/" target="_blank">Matekarcok</a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><a href="https://konnyedentanulok.hu/pitagorasz-tetel-erthetoen/"
+                                target="_blank">Konnyedentanulok</a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><a href="https://www.nkp.hu/tankonyv/matematika_8/lecke_03_002">NKP</a></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h6>Történelem:</h6>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><a href="http://tutimatek.hu/a-pitagorasz-tetel-eredete/" target="_blank">Tutimatek</a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><a href="https://hu.drunkentengu.com/istoriya-i-opredelenie-teoremyi-pifagora-116c14"
+                                target="_blank">Drunkentengu</a></td>
+                    </tr>
+                </table>
             </div>
         </div>
         <div class="row">
@@ -85,13 +136,6 @@
             </div>
         </div>
     </div>
-    Források:
-    Használat: - (https://matekarcok.hu/pitagorasz-tetele/)
-    - (https://konnyedentanulok.hu/pitagorasz-tetel-erthetoen/)
-    - (https://www.nkp.hu/tankonyv/matematika_8/lecke_03_002)
-
-    Történelem: - (http://tutimatek.hu/a-pitagorasz-tetel-eredete/)
-    - (https://hu.drunkentengu.com/istoriya-i-opredelenie-teoremyi-pifagora-116c14)
 </body>
 
 </html>
