--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
                         <td><a href="https://hu.drunkentengu.com/istoriya-i-opredelenie-teoremyi-pifagora-116c14"
                                 target="_blank">Drunkentengu</a></td>
                     </tr>
+                    <tr>
+                        <td><h6>Bizonyítás, érdekességek:</h6></td>
+                        
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Pitagorsz tétele - Tankönyvkiadó, Budapest, 1972, második kiadás</td>
+                    </tr>
                 </table>
             </div>
         </div>
