--- a/erdekessegek.html
+++ b/erdekessegek.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container px-4">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Pitagporasz tétel</a>
+            <a class="navbar-brand cim" href="#">Pitagporasz tétel</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
                     területnek meg kell egyeznie.</p>
             </div>
             <div class="col-md-5 col-lg-4">
-                <img src="img1.png" alt="" class="img-fluid">
+                <img src="img1.png" alt="Bizonyítás" class="img-fluid border border-secondary rounded">
             </div>
         </div>
         <div class="row">
@@ -82,7 +82,7 @@
                 </ol>
             </div>
         </div>
-        <div class="row">
+        <div class="row summary">
             <div class="col-12">
                 <h3 class="text-danger">Summary:</h3>
                 <p>The theorem existed way before Pythagoras, China even creating a proof.
@@ -102,6 +102,15 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
