--- a/alkalmazas.html
+++ b/alkalmazas.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="author" content="Varhol Vivien Veszteg Bernadett">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alkalmazása</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -42,29 +43,29 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <p>Az alapvető képlet, amit nagyon sokan tudnak az, az a<sup>2</sup>+b<sup>2</sup>=c<sup>2</sup>.
+        <p>Az alapvető képlet, amit nagyon sokan tudnak az, az <strong>a<sup>2</sup>+b<sup>2</sup>=c<sup>2</sup></strong>.
           Amit már nem biztos, hogy annyian tudnak (akik csak bemagolták a képletet, de nem értették meg, nem tudják a
-          logikáját és értelmezését), hogy, ha felcseréljük a tényezőket és az írásjeleket a helyükön hagyjuk, akkor a
-          képlet már nem lesz igaz.
+          logikáját és értelmezését), hogy, <strong>ha felcseréljük a tényezőket és az írásjeleket a helyükön hagyjuk</strong>, akkor a
+          képlet már <strong>nem lesz igaz</strong>.
           Vagyis c<sup>2</sup>+b<sup>2</sup>=a<sup>2</sup>és c<sup>2</sup>+a<sup>2</sup>=b<sup>2</sup> nem lesz igaz.
-          Hivatalos megfogalmazása: A derékszögű háromszög befogóira emelt négyzetek területeinek összege egyenlő az
+          <em>Hivatalos megfogalmazása:</em> A derékszögű háromszög befogóira emelt négyzetek területeinek összege egyenlő az
           átfogóra emelt négyzet területével.
-          Szavakkal megfogalmazva: A derékszögű háromszög két befogójára rajzolt négyzet területének összege egyenlő az
+          <em>Szavakkal megfogalmazva:</em> A derékszögű háromszög két befogójára rajzolt négyzet területének összege egyenlő az
           átfogóra rajzolt négyzet területével.</p>
       </div>
     </div>
-    <div class="row mt-3 mb-3">
+    <div class="row mt-3">
       <div class="col-md-5">
         <img src="haromszogek.png" alt="Háromszögek" class="img-fluid border border-secondary rounded">
       </div>
-      <div class="col-md-7">
+      <div class="col-md-7 pt-2">
         <h3>A tétel megfordítása:</h3>
-        <p>Ha egy háromszög két oldalhosszának négyzetösszege egyenlő a harmadik oldal hosszának négyzetével, akkor a
-          háromszög derékszögű.
-          Ha a<sup>2</sup>+b<sup>2</sup> kisebb, mint a c<sup>2</sup> akkor a háromszög TOMPASZÖGŰ. (A leghosszabb
-          oldallal szemben lévő szöge lesz a tompaszög.) Ha
-          a<sup>2</sup>+b<sup>2</sup>>c<sup>2</sup> akkor a háromszög HEGYESSZÖGŰ.
-          (A leghosszabb oldallal szemben lévő szöge is hegyesszög.)
+        <p><u>Ha egy háromszög két oldalhosszának négyzetösszege egyenlő a harmadik oldal hosszának négyzetével, akkor a
+          háromszög derékszögű.</u>
+          Ha a<sup>2</sup>+b<sup>2</sup> kisebb, mint a c<sup>2</sup> akkor a háromszög <strong><em>TOMPASZÖGŰ</em></strong>. <em>(A leghosszabb
+          oldallal szemben lévő szöge lesz a tompaszög.)</em> Ha
+          a<sup>2</sup>+b<sup>2</sup>>c<sup>2</sup> akkor a háromszög <strong><em>HEGYESSZÖGŰ</em></strong>.
+          <em>(A leghosszabb oldallal szemben lévő szöge is hegyesszög.)</em>
 
 
           A két befogó oldalhosszának négyzete egyenlő az átfogó oldalhosszának négyzetével</p>
@@ -72,7 +73,7 @@
 
         <p>Már az ókorban is a ennek a tételnek a segítségével hoztak létre derékszöget anélkül, hogy a tételt
           általánosságban kimondták volna.
-          Pitagoraszi számhármas: 32+42=52</p>
+          <em>Pitagoraszi számhármas: 32+42=52</em></p>
       </div>
     </div>
 
@@ -91,7 +92,7 @@
         </p>
       </div>
     </div>
-    <div class="row">
+    <div class="row pt-2">
       <div class="col-12">
         <footer>Készítette az All4one csapata</footer>
       </div>
