--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Varhol Vivien Veszteg Bernadett">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Pitagorsz-tétel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <!---->
 </head>
 
 <body>
@@ -49,31 +51,31 @@
             <div class="col-12">
                 <p>Sajnos az életéről nagyon kevés bizonyított tény maradt fenn, és az sem sokszor hiteles. Sokszor
                     pedig
-                    ezek az adatok teljesen ellent mondanak egymásnak, szóval nagyon semmi biztosan nem lehet tudni
-                    Pitagorsz életéről és munkásságáról.</p>
-                <p>A tétel Püthagorasz vagy Pitagorasz néven emlegetett matematikus-és fiziológusról kapta a nevét. Kr.
+                    ezek az adatok teljesen ellent mondanak egymásnak, szóval <strong>nagyon semmi biztosat nem lehet tudni
+                    Pitagorsz életéről és munkásságáról</strong> .</p>
+                <p>A tétel <strong>Püthagorasz</strong> vagy <strong>Pitagorasz</strong> néven emlegetett <strong>matematikus-és fiziológus</strong>ról kapta a nevét. Kr.
                     e
                     VI. században született Szamosz szigetén. Létre hozott egy titkos társulatot, ahol a matematika
                     mellett
-                    vallási és politikai kérdésekkel is foglalkozott. A követőit püthagureusokként is emlegetjük, akik
-                    azt
-                    gondolták, hogy a világ a számok közötti kapcsolatokra épül. A vezetőjükre szinte félistenként
-                    tekintettek, legendákat is találtak ki róla, és ebből kifolyólag homályos annyira Pitagorsz élete és
+                    vallási és politikai kérdésekkel is foglalkozott. A <strong>követőit püthagureusok</strong>ként is emlegetjük, akik
+                    <strong>azt
+                    gondolták, hogy a világ a számok közötti kapcsolatokra épül</strong>. A vezetőjükre szinte félistenként
+                    tekintettek, <strong>legendákat</strong> is <strong>találtak ki Pitagoraszról</strong>, és ebből kifolyólag homályos annyira Pitagorsz élete és
                     munkássága.</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-5 pb-2">
                 <img src="tanitas.jpg" alt="Pitagorasz tanít" class="img-fluid border border-secondary rounded">
             </div>
             <div class="col-md-7">
-                <p>A püthagoreus filozófiai iskola létrehozója és alapítója is volt egyben. A filozófiai
+                <p>A püthagoreus filozófiai iskola létrehozója és alapítója is volt egyben. <strong>Inkább a filozófiai
                     tevékenységeiről
-                    volt inkább ismertebb, mint a matematikai munkásságáról, szóval úgy vélik, hogy az utóbbival csak
+                    volt  ismertebb</strong>, mint a matematikai munkásságáról, szóval úgy vélik, hogy az utóbbival csak
                     mellékesen foglalkozott.</p>
-                <p>Nagyon kevesen tudják, hogy a Pitagorsz-tételt már biztosan felfedezték előtte is, szóval nem ő
+                <p>Nagyon kevesen tudják, hogy <strong>a Pitagorsz-tételre már biztosan rátaláltak</strong> és megismerték <strong>előtte is</strong>, szóval <strong>nem ő
                     fedezte
-                    fel, viszont valamelyik bizonyítás valószínűleg tőle származott. Eléggé elmosódott a határ aközött,
+                    fel</strong> , viszont valamelyik bizonyítás valószínűleg tőle származott. Eléggé elmosódott a határ aközött,
                     hogy
                     mit csinált ő és mit csináltak a tanítványi, de a későbbiekben mindent Pitagorsz nevéhez csatoltak.
                 </p>
@@ -158,13 +160,17 @@
                         <td></td>
                         <td>Pitagorsz tétele - Tankönyvkiadó, Budapest, 1972, második kiadás</td>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td><a href="https://www.piqsels.com/hu/public-domain-photo-jgzrj" target="_blank" class="linkek">Háttérkép</a></td>
+                    </tr>
                 </table>
             </div>
             <div class="d-none d-md-block col-md-4">
                 <img src="pitagorasz_szendvics.png" alt="Pitagorsz" class="img-fluid">
             </div>
         </div>
-        <div class="row">
+        <div class="row pt-2">
             <div class="col-12">
                 <footer>Készítette az All4one csapata</footer>
             </div>
