--- a/erdekessegek.html
+++ b/erdekessegek.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Varhol Vivien Veszteg Bernadett">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Érdekességek</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -45,13 +46,13 @@
                 <h2>Bizonyítás:</h2>
                 <p> Rajzoljunk két azonos négyzetet amelyek egyenlőek a+b-vel, majd bontsuk fel őket a fenti ábra
                     szerint.
-                    A bal oldali négyzetet tagoljuk négy részre úgy, hogy négy db. derékszögű háromszöget kapjunk
+                    A <strong>bal oldal</strong>i négyzetet tagoljuk <strong>négy rész</strong>re úgy, hogy <strong>négy darab derékszögű háromszög</strong>et kapjunk
                     melyeknek
-                    befogói a és b. Ezek azonos méretűek.
-                    A jobb oldali négyszöget tagoljuk öt részre úgy, hogy négy az előző felbontáséval egyenlő
-                    derékszögeket
-                    kapjunk (azaz befogójuk a és b).</p>
-                <p>Mind a kettő négyzetben található derékszögű háromszögeknek c az átfogója.
+                    befogói <strong>a és b</strong>. <em>Ezek azonos méretűek.</em>
+                    A <strong>jobb oldal</strong>i négyszöget tagoljuk <strong>öt rész</strong>re úgy, hogy az előző felbontásával <strong>négy egyenlő
+                    derékszög</strong>eket
+                    kapjunk (azaz <strong>befogójuk a és b</strong>).</p>
+                <p>Mind a kettő négyzetben található derékszögű háromszögeknek <strong>c az átfogója</strong>.
                     Ha ebből a két négyzetből elvesszük a négy-négy azonos méretű háromszögeket, akkor a megmaradt
                     területnek meg kell egyeznie.</p>
             </div>
@@ -59,26 +60,26 @@
                 <img src="img1.png" alt="Bizonyítás" class="img-fluid border border-secondary rounded">
             </div>
         </div>
-        <div class="row">
+        <div class="row pt-2">
             <div class="col-12">
                 <h2>Érdekességek:</h2>
                 <ol>
-                    <li>A tétel bizonyítására általában felhasználjuk azt az euklideszt axiomát amely kimondja hogy: "Ha
-                        egyenlőkből egyenlőket veszünk el, akkor a maradékok is egyenlőek."</li>
+                    <li>A tétel bizonyítására általában felhasználjuk azt az <em>euklideszt axiomát</em> amely kimondja hogy: <em>"Ha
+                        egyenlőkből egyenlőket veszünk el, akkor a maradékok is egyenlőek."</em></li>
                     <li>Sokan követik el a hibát a tétellel, hogy csak bemagolják az a*a+b*b=c*c tételt, és meglepődnek
                         amikor
                         egy olyan háromszöggel találkoznak, aminek a befogói és átfogója teljesen másképp van elnevezve,
                         hamissá
-                        téve azt amit bemagoltak. Nem szabad elfelejteni, hogy a pitagorasz tétel az azt mondja ki, hogy
+                        téve azt amit bemagoltak. Nem szabad elfelejteni, hogy <strong>a pitagorasz tétel az azt mondja ki, hogy
                         a
-                        befogók négyzeteinek összege egyenlő az átfogó négyzetével.</li>
-                    <li>Amikor Püthagorasz felfedezte a pitagorasz tételt, akkor már idniai, görög, babilóniai és kínai
-                        matematikusok már ismerték a tételt.</li>
-                    <li>Legelőször a Kínaiak adtak bizonyitást a tételre, még Püthagorasz előtt.</li>
-                    <li>Tanitványaival fontos, máig ható eredményeket értek el matematikában, csillagászatban és még
-                        zenében
+                        befogók négyzeteinek összege egyenlő az átfogó négyzetével</strong>.</li>
+                    <li><strong>Amikor Püthagorasz felfedezte</strong> a pitagorasz tételt, akkor már indiai, görög, babilóniai és kínai
+                        matematikusok <strong>már ismerték a tételt</strong>.</li>
+                    <li><em>Legelőször</em> a Kínaiak adtak bizonyitást a tételre, még Püthagorasz előtt.</li>
+                    <li>Tanitványaival fontos, máig ható eredményeket értek el <em>matematikában</em>, <em>csillagászatban</em> és még
+                        <em>zenében</em>
                         is.</li>
-                    <li>Püthagoraszt a "Számok atyja"-ként is emlegetik.</li>
+                    <li>Püthagoraszt a <strong>"Számok atyja"</strong>-ként is emlegetik.</li>
                 </ol>
             </div>
         </div>
@@ -96,7 +97,7 @@
                     should be left with the same area size from both big squares. </p>
             </div>
         </div>
-        <div class="row">
+        <div class="row pt-2">
             <div class="col-12">
                 <footer>Készítette az All4one csapata.</footer>
             </div>
