kis_utolsó_simítások

--- a/alkalmazas.html
+++ b/alkalmazas.html
@@ -43,15 +43,20 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <p>Az alapvető képlet, amit nagyon sokan tudnak az, az <strong>a<sup>2</sup>+b<sup>2</sup>=c<sup>2</sup></strong>.
+        <p>Az alapvető képlet, amit nagyon sokan tudnak az, az
+          <strong>a<sup>2</sup>+b<sup>2</sup>=c<sup>2</sup></strong>.
           Amit már nem biztos, hogy annyian tudnak (akik csak bemagolták a képletet, de nem értették meg, nem tudják a
-          logikáját és értelmezését), hogy, <strong>ha felcseréljük a tényezőket és az írásjeleket a helyükön hagyjuk</strong>, akkor a
+          logikáját és értelmezését), hogy, <strong>ha felcseréljük a tényezőket és az írásjeleket a helyükön
+            hagyjuk</strong>, akkor a
           képlet már <strong>nem lesz igaz</strong>.
-          Vagyis c<sup>2</sup>+b<sup>2</sup>=a<sup>2</sup>és c<sup>2</sup>+a<sup>2</sup>=b<sup>2</sup> nem lesz igaz.
-          <em>Hivatalos megfogalmazása:</em> A derékszögű háromszög befogóira emelt négyzetek területeinek összege egyenlő az
+          Vagyis c<sup>2</sup>+b<sup>2</sup>=a<sup>2</sup> és c<sup>2</sup>+a<sup>2</sup>=b<sup>2</sup> nem lesz igaz.
+          <em>Hivatalos megfogalmazása:</em> A derékszögű háromszög befogóira emelt négyzetek területeinek összege
+          egyenlő az
           átfogóra emelt négyzet területével.
-          <em>Szavakkal megfogalmazva:</em> A derékszögű háromszög két befogójára rajzolt négyzet területének összege egyenlő az
-          átfogóra rajzolt négyzet területével.</p>
+          <em>Szavakkal megfogalmazva:</em> A derékszögű háromszög két befogójára rajzolt négyzet területének összege
+          egyenlő az
+          átfogóra rajzolt négyzet területével.
+        </p>
       </div>
     </div>
     <div class="row mt-3">
@@ -61,19 +66,22 @@
       <div class="col-md-7 pt-2">
         <h3>A tétel megfordítása:</h3>
         <p><u>Ha egy háromszög két oldalhosszának négyzetösszege egyenlő a harmadik oldal hosszának négyzetével, akkor a
-          háromszög derékszögű.</u>
-          Ha a<sup>2</sup>+b<sup>2</sup> kisebb, mint a c<sup>2</sup> akkor a háromszög <strong><em>TOMPASZÖGŰ</em></strong>. <em>(A leghosszabb
-          oldallal szemben lévő szöge lesz a tompaszög.)</em> Ha
+            háromszög derékszögű.</u>
+          Ha a<sup>2</sup>+b<sup>2</sup> kisebb, mint a c<sup>2</sup> akkor a háromszög
+          <strong><em>TOMPASZÖGŰ</em></strong>. <em>(A leghosszabb
+            oldallal szemben lévő szöge lesz a tompaszög.)</em> Ha
           a<sup>2</sup>+b<sup>2</sup>>c<sup>2</sup> akkor a háromszög <strong><em>HEGYESSZÖGŰ</em></strong>.
           <em>(A leghosszabb oldallal szemben lévő szöge is hegyesszög.)</em>
 
 
-          A két befogó oldalhosszának négyzete egyenlő az átfogó oldalhosszának négyzetével</p>
+          A két befogó oldalhosszának négyzete egyenlő az átfogó oldalhosszának négyzetével
+        </p>
 
 
         <p>Már az ókorban is a ennek a tételnek a segítségével hoztak létre derékszöget anélkül, hogy a tételt
           általánosságban kimondták volna.
-          <em>Pitagoraszi számhármas: 32+42=52</em></p>
+          <em>Pitagoraszi számhármas: 32+42=52</em>
+        </p>
       </div>
     </div>
 
@@ -83,11 +91,10 @@
         <h3 class="text-danger">Summary:</h3>
         <p>Pythagoras' theorem states the following: the square of the hypotenuse is equal to the sum of the other two
           sided' squares.
-          Or in short: a<sup>2</sup>+b<sup>2</sup>=c<sup>2</sup>.
+          Or in short: a<sup>2</sup>+b<sup>2</sup>= c<sup>2</sup>.
           If you just simply cram Pythagoras' theorem, you won't be able to properly use it.
           If two sides' square sum is equal to that of the third side, then the triangle is right-angled, if
-          a<sup>2</sup>+b<sup>2</sup>
-          < c<sup>2</sup>
+          a<sup>2</sup>+b<sup>2</sup>< c<sup>2</sup>
             the it's an obtuse-angle, or if a<sup>2</sup>+b<sup>2</sup>> c<sup>2</sup> then it's an acute-angle.
         </p>
       </div>
