--- a/erdekessegek.html
+++ b/erdekessegek.html
@@ -92,7 +92,7 @@
                     He was known as the father of numbers.
                     Proving the theory relies on the belief of if I take equal parts away from two identical objects,
                     then I'll end up with two equal sized areas. So you draw two equal sized squares, and in the left
-                    one put a2 square and b2 square while in the other you put c2 square. the areas left should be the
+                    one put a<sup>2</sup> square and b<sup>2</sup> square while in the other you put c<sup>2</sup> square. the areas left should be the
                     triangle we started with four times (so in equal sizes). Just take away those triangles and you
                     should be left with the same area size from both big squares. </p>
             </div>
